--- a/control_beer/src/base_components/beer_card/BeerCard.css
+++ b/control_beer/src/base_components/beer_card/BeerCard.css
@@ -1,7 +1,7 @@
 
 .card-img {
     margin: auto;
-    max-width: 43px;
+    max-width: 34px;
 }
 
 .card {
@@ -14,6 +14,9 @@
     color: rgb(233, 233, 233);
     background: url('./cardbg.png');
     border-color: rgb(255, 254, 254);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card-body {
